# runcheap-ssg

./: .gitignore  README.md  pyproject.toml
examples/my_project/: README.md  manage.py
examples/my_project/my_website/: context_processors.py  settings.py  urls.py  views.py
examples/my_project/my_website/locale/nl/LC_MESSAGES/: django.mo  django.po
examples/my_project/my_website/static/: mywebsite.css
examples/my_project/my_website/templates/: _base.html  about.html  blog_entry.html  landing.html  non-i18n.html  not_included.html
runcheap_ssg/: decorators.py
runcheap_ssg/management/commands/: runcheap_ssg_build.py  runcheap_ssg_serve.py
runcheap_ssg/templates/runcheap_ssg/: redirect.html
runcheap_ssg/templatetags/: runcheap_ssg.py
