[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "runcheap-ssg"
version = "1.0.3"
requires-python = ">=3.10"
dependencies = [
    "django>=4.2.11",
]
authors = [
    {name = "Daniel Roesler", email = "daniel@run.cheap"},
]
maintainers = [
    {name = "Daniel Roesler", email = "daniel@run.cheap"},
]
description = "A static site generator app for django"
readme = "README.md"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Framework :: Django",
    "Programming Language :: Python",
]

[project.urls]
Homepage = "https://github.com/runcheap/runcheap-ssg"
Documentation = "https://github.com/runcheap/runcheap-ssg"
Repository = "https://github.com/runcheap/runcheap-ssg"
"Bug Tracker" = "https://github.com/runcheap/runcheap-ssg/issues"

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
]

[tool.black]
line-length = 120
